commit to switch branch

--- a/Pages/index.html
+++ b/Pages/index.html
@@ -21,8 +21,8 @@
       <h2>Login to your account</h2>
       <form>
           <div class="form-group">
-              <label for="email">Email</label>
-              <input type="email" id="email" placeholder="balamia@gmail.com" required />
+              <label for="username">Username</label>
+              <input type="text" id="username" placeholder="Username" required />
           </div>
           <div class="form-group">
               <label for="password">Password</label>
