--- a/Pages/Create.html
+++ b/Pages/Create.html
@@ -14,12 +14,42 @@
       src="https://kit.fontawesome.com/d782156bec.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="Create.js"></script> <!-- JavaScript for fetching data -->
+    <script defer src="Create.js"></script> <!-- JavaScript for handling uploads -->
     <title>Home</title>
     <style>
       a:hover {
         color: black;
         font-weight: bold;
+      }
+
+      .image-upload {
+        display: flex;
+        gap: 10px;
+      }
+
+      .image-box {
+        width: 80px;
+        height: 80px;
+        border: 2px dashed #ccc;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        cursor: pointer;
+        position: relative;
+      }
+
+      .image-preview {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        position: absolute;
+        top: 0;
+        left: 0;
+      }
+
+      .hidden-input {
+        display: none;
       }
     </style>
   </head>
@@ -79,41 +109,16 @@
       <div class="UploadImg">
         <h2>Add your pictures</h2>
         <div class="image-upload">
-          <div class="image-box">📷</div>
-          <div class="image-box">📷</div>
-          <div class="image-box">📷</div>
-          <div class="image-box">➕</div>
+          <input type="file" id="imageUpload" class="hidden-input" accept="image/*" multiple />
+          <div class="image-box" id="addImageBox">➕</div>
         </div>
       </div>
     </div>
   </body>
   <footer>
     <div class="footer">
-      <div>
-        <h3>TRADEROO</h3>
-        <p>We help you find your dream trade</p>
-        <p><strong>Address</strong><br />Lucerne 6002, Switzerland</p>
-        <p><strong>Contact</strong><br />teamtraderoo@gmail.com</p>
-        <p>Legal status: Sole proprietorship</p>
-      </div>
-      <div>
-        <h3>Information</h3>
-        <a href="#">About</a>
-        <a href="#">Product</a>
-        <a href="#">Blog</a>
-      </div>
-      <div>
-        <h3>Company</h3>
-        <a href="AboutUs.html">Team</a>
-        <a href="AboutUs.html">Our Idea</a>
-        <a href="AboutUs.html">Our Story</a>
-      </div>
-      <div>
-        <h3>Contact</h3>
-        <a href="Review.html">Feedback</a>
-        <a href="#">Pricing</a>
-        <a href="#">Resources</a>
-      </div>
+      <h3>TRADEROO</h3>
+      <p>We help you find your dream trade</p>
     </div>
   </footer>
 </html>
