--- a/Pages/index.html
+++ b/Pages/index.html
@@ -22,7 +22,7 @@
       <form>
           <div class="form-group">
               <label for="username">Username</label>
-              <input type="text" id="username" placeholder="Username" required />
+              <input type="text" id="username" placeholder="username" required />
           </div>
           <div class="form-group">
               <label for="password">Password</label>
