fixed swipe, but did it for now with only one card

--- a/Pages/Swipe.html
+++ b/Pages/Swipe.html
@@ -76,11 +76,12 @@
             also still have the ...
           </p>
           <p>432 Views</p>
-          <a href="#" class="SwipeLeft"> <i class="fa-solid fa-heart"></i></a>
-          <a href="#" class="SwipeRight"><i class="fa-solid fa-xmark"></i></a>
+          <a class="SwipeLeft"> <i class="fa-solid fa-xmark"></i></a>
+          <a class="SwipeRight"><i class="fa-solid fa-heart"></i></a>
         </div>
       </div>
     </div>
+    <script src="Swipe.js"></script>
   </body>
   <footer>
     <div class="footer">
