fixed navbar display and css files of every page

--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -8,12 +8,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap" rel="stylesheet">
   <link href="Item.css" rel="stylesheet">
   <title>Home</title>
-  <style>
-    a:hover {
-      color: black; /* Hover-Effekt */
-      font-weight: bold; /* Fettgedruckt bei Hover */
-    }
-  </style>
+  <script
+  src="https://kit.fontawesome.com/d782156bec.js"
+  crossorigin="anonymous"
+></script>
 </head>
 <body>
   <!-- Navigation -->
