--- a/Pages/Swipe.html
+++ b/Pages/Swipe.html
@@ -15,24 +15,10 @@
       src="https://kit.fontawesome.com/d782156bec.js"
       crossorigin="anonymous"
     ></script>
-    <style>
-      a:hover {
-        color: black; /* Hover-Effekt */
-        font-weight: bold; /* Fettgedruckt bei Hover */
-      }
-    </style>
   </head>
   <body>
     <!-- Navigation -->
-    <nav
-      class="NavBar"
-      style="
-        text-align: center;
-        padding: 10px;
-        background-color: #fff;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-      "
-    >
+    <nav class="NavBar">
       <a class="NavPages" href="Home.html"> Traderoo</a>
       <a class="NavPages" href="Home.html">Home</a>
       <a class="NavPages" href="Swipe.html">Swipe</a>
@@ -77,7 +63,9 @@
           </p>
           <p>432 Views</p>
           <a class="SwipeLeft"> <i class="fa-solid fa-xmark"></i></a>
-          <a class="SwipeRight"><i class="fa-solid fa-heart"></i></a>
+          <a href="Item.html" class="SwipeRight"
+            ><i class="fa-solid fa-heart"></i
+          ></a>
         </div>
       </div>
     </div>
