--- a/Pages/AllTrades.html
+++ b/Pages/AllTrades.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Manrope:wght@200..800&display=swap"
       rel="stylesheet"
     />
+    <script
+    src="https://kit.fontawesome.com/d782156bec.js"
+    crossorigin="anonymous"
+  ></script>
     <link href="AllTrades.css" rel="stylesheet" />
     <style>
       a:hover {
@@ -20,15 +24,7 @@
   </head>
   <body>
     <!-- Navigation -->
-    <nav
-      class="NavBar"
-      style="
-        text-align: center;
-        padding: 10px;
-        background-color: #fff;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-      "
-    >
+    <nav class="NavBar">
       <a class="NavPages" href="Home.html"> Traderoo</a>
       <a class="NavPages" href="Home.html">Home</a>
       <a class="NavPages" href="Swipe.html">Swipe</a>
@@ -36,7 +32,7 @@
       <a class="NavPages" href="Create.html">Create Trade</a>
       <a class="NavPages" href="AboutUs.html">About us</a>
       <a class="NavPages" href="YourProfile.html"
-        ><i class="fa-solid fa-user" aria-hidden="true"></i
+        ><i class="fa-solid fa-user"></i
       ></a>
     </nav>
 <center>
