--- a/Pages/Create.html
+++ b/Pages/Create.html
@@ -14,55 +14,22 @@
       src="https://kit.fontawesome.com/d782156bec.js"
       crossorigin="anonymous"
     ></script>
-    <script defer src="Create.js"></script> <!-- JavaScript for handling uploads -->
+    <script defer src="Create.js"></script>
+    <!-- JavaScript for handling uploads -->
     <title>Home</title>
-    <style>
-      a:hover {
-        color: black;
-        font-weight: bold;
-      }
-
-      .image-upload {
-        display: flex;
-        gap: 10px;
-      }
-
-      .image-box {
-        width: 80px;
-        height: 80px;
-        border: 2px dashed #ccc;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 20px;
-        cursor: pointer;
-        position: relative;
-      }
-
-      .image-preview {
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        position: absolute;
-        top: 0;
-        left: 0;
-      }
-
-      .hidden-input {
-        display: none;
-      }
-    </style>
   </head>
   <body>
     <!-- Navigation -->
-    <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
+    <nav class="NavBar">
       <a class="NavPages" href="Home.html">Traderoo</a>
       <a class="NavPages" href="Home.html">Home</a>
       <a class="NavPages" href="Swipe.html">Swipe</a>
       <a class="NavPages" href="AllTrades.html">All Trades</a>
       <a class="NavPages" href="Create.html">Create Trade</a>
       <a class="NavPages" href="AboutUs.html">About us</a>
-      <a class="NavPages" href="YourProfile.html"><i class="fa-solid fa-user"></i></a>
+      <a class="NavPages" href="YourProfile.html"
+        ><i class="fa-solid fa-user"></i
+      ></a>
     </nav>
 
     <center>
@@ -76,24 +43,43 @@
       <div class="trade-info">
         <div class="input-group">
           <label>Title</label>
-          <input type="text" id="title" placeholder="Trade title (e.g., Bookshelf)" required />
+          <input
+            type="text"
+            id="title"
+            placeholder="Trade title (e.g., Bookshelf)"
+            required
+          />
         </div>
         <div class="input-group">
           <label>Description</label>
-          <textarea id="description" placeholder="Write a short description..." required></textarea>
+          <textarea
+            id="description"
+            placeholder="Write a short description..."
+            required
+          ></textarea>
         </div>
         <div class="input-group">
           <label>Brand</label>
-          <input type="text" id="brand" placeholder="Brand (e.g., IKEA, Custom-made)" />
+          <input
+            type="text"
+            id="brand"
+            placeholder="Brand (e.g., IKEA, Custom-made)"
+          />
         </div>
         <div class="input-group">
           <label>Estimated Value</label>
-          <input type="number" id="estimatedValue" placeholder="Estimated Value (CHF)" required />
+          <input
+            type="number"
+            id="estimatedValue"
+            placeholder="Estimated Value (CHF)"
+            required
+          />
         </div>
         <div class="input-group">
           <label>Product Condition</label>
           <select id="productCondition" required>
-            <option value="">Loading...</option> <!-- Will be replaced by JavaScript -->
+            <option value="">Loading...</option>
+            <!-- Will be replaced by JavaScript -->
           </select>
         </div>
         <div class="measurements">
@@ -109,7 +95,13 @@
       <div class="UploadImg">
         <h2>Add your pictures</h2>
         <div class="image-upload">
-          <input type="file" id="imageUpload" class="hidden-input" accept="image/*" multiple />
+          <input
+            type="file"
+            id="imageUpload"
+            class="hidden-input"
+            accept="image/*"
+            multiple
+          />
           <div class="image-box" id="addImageBox">➕</div>
         </div>
       </div>
