--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -15,24 +15,10 @@
       src="https://kit.fontawesome.com/d782156bec.js"
       crossorigin="anonymous"
     ></script>
-    <style>
-      a:hover {
-        color: black; /* Hover-Effekt */
-        font-weight: bold; /* Fettgedruckt bei Hover */
-      }
-    </style>
   </head>
   <body>
     <!-- Navigation -->
-    <nav
-      class="NavBar"
-      style="
-        text-align: center;
-        padding: 10px;
-        background-color: #fff;
-        box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
-      "
-    >
+    <nav class="NavBar">
       <a class="NavPages" href="Home.html"> Traderoo</a>
       <a class="NavPages" href="Home.html">Home</a>
       <a class="NavPages" href="Swipe.html">Swipe</a>
