added the logo to the navbar

--- a/Pages/Create.html
+++ b/Pages/Create.html
@@ -21,7 +21,9 @@
   <body>
     <!-- Navigation -->
     <nav class="NavBar">
-      <a class="NavPages" href="Home.html">Traderoo</a>
+      <a class="NavPages" href="Home.html">
+        <img src="../Logo.png" alt="traderoo Logo" class="NavLogo"
+      /></a>
       <a class="NavPages" href="Home.html">Home</a>
       <a class="NavPages" href="Swipe.html">Swipe</a>
       <a class="NavPages" href="AllTrades.html">All Trades</a>
@@ -109,8 +111,31 @@
   </body>
   <footer>
     <div class="footer">
-      <h3>TRADEROO</h3>
-      <p>We help you find your dream trade</p>
+      <div>
+        <h3>TRADEROO</h3>
+        <p>We help you find your dream trade</p>
+        <p><strong>Adress</strong><br />Lucerne 6002, Switzerland</p>
+        <p><strong>Contact</strong><br />teamtraderoo@gmail.com</p>
+        <p>Legal status: Sole proprietorship</p>
+      </div>
+      <div>
+        <h3>Information</h3>
+        <a href="#">About</a>
+        <a href="#">Product</a>
+        <a href="#">Blog</a>
+      </div>
+      <div>
+        <h3>Company</h3>
+        <a href="AboutUs.html">Team</a>
+        <a href="AboutUs.html">Out Idea</a>
+        <a href="AboutUs.html">Our story</a>
+      </div>
+      <div>
+        <h3>Contact</h3>
+        <a href="Review.html">Feedback</a>
+        <a href="#">Pricing</a>
+        <a href="#">Resources</a>
+      </div>
     </div>
   </footer>
 </html>
