--- a/Pages/Home.html
+++ b/Pages/Home.html
@@ -14,7 +14,7 @@
 <body>
   <!-- Navigation -->
   <nav class="NavBar">
-    <a class="NavPages" href="Home.html"> Traderoo</a>
+    <a class="NavPages" href="Home.html"> <img src="../Logo.png" alt="traderoo Logo" class="NavLogo" ></a>
     <a class="NavPages" href="Home.html" >Home</a>
     <a class="NavPages"href="Swipe.html" >Swipe</a>
     <a class="NavPages"href="AllTrades.html" >All Trades</a>
