--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -15,8 +15,8 @@
 </head>
 <body>
   <!-- Navigation -->
-  <nav class="NavBar" style="text-align: center; padding: 10px; background-color: #fff; box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);">
-    <a class="NavPages" href="Home.html"> Traderoo</a>
+  <nav class="NavBar" >
+    <a class="NavPages" href="Home.html"> <img src="../Logo.png" alt="traderoo Logo" class="NavLogo" ></a>
     <a class="NavPages" href="Home.html" >Home</a>
     <a class="NavPages"href="Swipe.html" >Swipe</a>
     <a class="NavPages"href="AllTrades.html" >All Trades</a>
