created and finished Plan site

--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -54,7 +54,7 @@
         <div class="stats">👥 13 Follower | 6 Following</div>
         <div class="stats">🔄 35 Successful Trades</div>
         <div class="stars">★★★★★ 4.5</div>
-        <a href="#" class="btn">⬆ Upgrade plan</a>
+        <a href="Plan.html" class="btn">⬆ Upgrade plan</a>
       </div>
       <div class="card">
         <img src="../table.jpg" />
