deleted chat pages and edited Your profile page

--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -32,18 +32,24 @@
     </nav>
 
     <div class="YourProfile">
-      <h1 class="heading">YourProfile</h1>
-      <p class="subtitle">Hello, Im Markus! Feel free to checkout my trades</p>
-      <input type="text" placeholder="search in Markus Trades" />
+      <center>
+        <h1 class="heading">YourProfile</h1>
+        <p class="subtitle">
+          Hello, Im Markus! Feel free to checkout my trades
+        </p>
+        <input type="text" placeholder="search in Markus Trades" />
+      </center>
     </div>
     <div class="AllTradesbutton">
-      <button class="example-btn2">View matches</button>
-      <a href="AllTrades.html"
-        ><button class="example-btn2">See more</button></a
-      >
-      <a href="Create.html"
-        ><button class="example-btn2">Create new Trade</button></a
-      >
+      <center>
+        <button class="example-btn2">View matches</button>
+        <a href="AllTrades.html"
+          ><button class="example-btn2">See more</button></a
+        >
+        <a href="Create.html"
+          ><button class="example-btn2">Create new Trade</button></a
+        >
+      </center>
     </div>
 
     <div class="card-container">
@@ -60,28 +66,28 @@
         <img src="../table.jpg" />
         <h4>Table Lamp</h4>
         <p>Warm shade, bought 2 years ago, cozy glow.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>140 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Area Rug</h4>
         <p>Soft, neutral rug with a small corner stain.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>56 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Office Chair</h4>
         <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>39 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Office Chair</h4>
         <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>39 Views</p>
       </div>
     </div>
@@ -90,35 +96,35 @@
         <img src="../table.jpg" />
         <h4>Table Lamp</h4>
         <p>Warm shade, bought 2 years ago, cozy glow.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>140 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Office Chair</h4>
         <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>39 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Office Chair</h4>
         <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>39 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Area Rug</h4>
         <p>Soft, neutral rug with a small corner stain.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>56 Views</p>
       </div>
       <div class="card">
         <img src="../table.jpg" />
         <h4>Office Chair</h4>
         <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Edit</button>
+        <button class="match-button">Delete</button>
         <p>39 Views</p>
       </div>
     </div>
