--- a/Pages/Item.html
+++ b/Pages/Item.html
@@ -57,51 +57,13 @@
           <div></div>
           <div></div>
       </div>
-      <a href="Match.html"><div class="match-button">Match now with Markus</div></a>
+      <div class="match-button">Match now with Markus</div>
       </div>
   </div>
 
 
-  <h2 style="text-align: center;">Similar Trades</h2>
-    <div class="card-container">
-        <div class="card">
-            <img src="../table.jpg">
-            <h4>Table Lamp</h4>
-            <p>Warm shade, bought 2 years ago, cozy glow.</p>
-            <a href="Item.html"><button class="match-button">Match</button></a>
-            <p>140 Views</p>
-        </div>
-        <div class="card">
-          <img src="../table.jpg">
-            <h4>Area Rug</h4>
-            <p>Soft, neutral rug with a small corner stain.</p>
-            <a href="Item.html"><button class="match-button">Match</button></a>
-            <p>56 Views</p>
-        </div>
-        <div class="card">
-          <img src="../table.jpg">
-            <h4>Office Chair</h4>
-            <p>Ergonomic, 1 year old, adjustable height.</p>
-            <a href="Item.html"><button class="match-button">Match</button></a>
-            <p>39 Views</p>
-        </div>
-        <div class="card">
-          <img src="../table.jpg">
-            <h4>Old Vase</h4>
-            <p>Sleek ceramic vase, perfect for decor.</p>
-            <a href="Item.html"><button class="match-button">Match</button></a>
-            <p>170 Views</p>
-        </div>
-        <div class="card">
-          <img src="../table.jpg">
-            <h4>Old Vase</h4>
-            <p>Sleek ceramic vase, perfect for decor.</p>
-            <a href="Item.html"><button class="match-button">Match</button></a>
-            <p>170 Views</p>
-        </div>
-    </div>
+  
     <script src="Item.js"></script>
-  </div>
   </body>
 
 
