finished yourprofile function

--- a/Pages/YourProfile.html
+++ b/Pages/YourProfile.html
@@ -35,9 +35,11 @@
       <center>
         <h1 class="heading">YourProfile</h1>
         <p class="subtitle">
-          Hello, Im Markus! Feel free to checkout my trades
+          <div class="input-group">
+            <p class="tradeuser"></p>
+          </div>
         </p>
-        <input type="text" placeholder="search in Markus Trades" />
+        <input type="text" placeholder="Search" />
       </center>
     </div>
     <div class="AllTradesbutton">
@@ -55,82 +57,15 @@
     <div class="card-container">
       <div class="profile-card">
         <div class="name">Markus Rieder</div>
-        <div class="username">markusrieder22</div>
-        <div class="level">Level 14 Trader</div>
-        <div class="stats">👥 13 Follower | 6 Following</div>
-        <div class="stats">🔄 35 Successful Trades</div>
-        <div class="stars">★★★★★ 4.5</div>
+        <div class="email">markusrieder22</div>
         <a href="Plan.html" class="btn">⬆ Upgrade plan</a>
       </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Table Lamp</h4>
-        <p>Warm shade, bought 2 years ago, cozy glow.</p>
-        <button class="match-button">Delete</button>
-        <p>140 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Area Rug</h4>
-        <p>Soft, neutral rug with a small corner stain.</p>
-        <button class="match-button">Delete</button>
-        <p>56 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Office Chair</h4>
-        <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Delete</button>
-        <p>39 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Office Chair</h4>
-        <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Delete</button>
-        <p>39 Views</p>
-      </div>
-    </div>
-    <div class="card-container">
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Table Lamp</h4>
-        <p>Warm shade, bought 2 years ago, cozy glow.</p>
-        <button class="match-button">Delete</button>
-        <p>140 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Office Chair</h4>
-        <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Delete</button>
-        <p>39 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Office Chair</h4>
-        <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Delete</button>
-        <p>39 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Area Rug</h4>
-        <p>Soft, neutral rug with a small corner stain.</p>
-        <button class="match-button">Delete</button>
-        <p>56 Views</p>
-      </div>
-      <div class="card">
-        <img src="../table.jpg" />
-        <h4>Office Chair</h4>
-        <p>Ergonomic, 1 year old, adjustable height.</p>
-        <button class="match-button">Delete</button>
-        <p>39 Views</p>
-      </div>
+      <div id="allproducts" class="card-container"></div>
     </div>
     <center>
       <button class="example-btn2">View more</button>
     </center>
+    <script src="YourProfile.js"></script>
   </body>
   <footer>
     <div class="footer">
