finished swipe function

--- a/Pages/Swipe.html
+++ b/Pages/Swipe.html
@@ -54,62 +54,7 @@
             Trade and Enjoy: "Arrange the trade and enjoy your new item!"
           </p>
         </div>
-        <div class="card">
-          <img src="../table.jpg" />
-          <h4>Airpods Max</h4>
-          <p>Posted by <strong>Joseph Blättler</strong></p>
-          <p>
-            The Airpods are 2 years old and are in near excellent Condition. I
-            also still have the ...
-          </p>
-          <p>432 Views</p>
-          <a class="SwipeLeft"> <i class="fa-solid fa-xmark"></i></a>
-          <a href="Item.html" class="SwipeRight"
-            ><i class="fa-solid fa-heart"></i
-          ></a>
-        </div>
-        <div class="card">
-          <img src="../table.jpg" />
-          <h4>Airpods Max</h4>
-          <p>Posted by <strong>Joseph Blättler</strong></p>
-          <p>
-            The Airpods are 2 years old and are in near excellent Condition. I
-            also still have the ...
-          </p>
-          <p>432 Views</p>
-          <a class="SwipeLeft"> <i class="fa-solid fa-xmark"></i></a>
-          <a href="Item.html" class="SwipeRight"
-            ><i class="fa-solid fa-heart"></i
-          ></a>
-        </div>
-        <div class="card">
-          <img src="../table.jpg" />
-          <h4>Airpods Max</h4>
-          <p>Posted by <strong>Joseph Blättler</strong></p>
-          <p>
-            The Airpods are 2 years old and are in near excellent Condition. I
-            also still have the ...
-          </p>
-          <p>432 Views</p>
-          <a class="SwipeLeft"> <i class="fa-solid fa-xmark"></i></a>
-          <a href="Item.html" class="SwipeRight"
-            ><i class="fa-solid fa-heart"></i
-          ></a>
-        </div>
-        <div class="card">
-          <img src="../table.jpg" />
-          <h4>Airpods Max</h4>
-          <p>Posted by <strong>Joseph Blättler</strong></p>
-          <p>
-            The Airpods are 2 years old and are in near excellent Condition. I
-            also still have the ...
-          </p>
-          <p>432 Views</p>
-          <a class="SwipeLeft"> <i class="fa-solid fa-xmark"></i></a>
-          <a href="Item.html" class="SwipeRight"
-            ><i class="fa-solid fa-heart"></i
-          ></a>
-        </div>
+        <div class="card-container"></div>
       </div>
     </div>
     <script src="Swipe.js"></script>
